# cbindgen-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: bindings.h
rust-part/: Cargo.toml  build.rs  cbindgen.toml
rust-part/src/: data_structure.rs  ex_structs.rs  lib.rs
rust-part/src/data_structure/: vec_wrapper.rs
